made the top par of buttons stick to the bottom

--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
 
 		<div id = "menu" class = "menuOne">
 			<ul id = "menuLiOne">
-					<li> <button type="button"  class = "btnOne"> <p>About Me</p> </button> </li>
+					<li> <button type="button"  class = "btnOne" id = "btnOneOne"> <p>About Me</p> </button> </li>
 					<li> <button type="button"  class = "btnOne"> <p>My Work</p> </button> </li>
 					<li> <button type="button"  class = "btnOne"> <p>Other</p> </button> </li>
 			</ul>
